[gd_scene load_steps=44 format=2]

[ext_resource path="res://font/Brightly Crush Shine.otf" type="DynamicFontData" id=1]
[ext_resource path="res://images/background02.jpg" type="Texture" id=2]
[ext_resource path="res://FishesScenes/fishLevel6Scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://FishesScenes/gemScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://FishesScenes/fishLevel5Scene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/playerScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://FishesScenes/jellyFishScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://FishesScenes/SharkScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://CHAPTER1.gd" type="Script" id=9]
[ext_resource path="res://FishesScenes/fishLevel4Scene.tscn" type="PackedScene" id=10]
[ext_resource path="res://FishesScenes/fishLevel1Scene.tscn" type="PackedScene" id=11]
[ext_resource path="res://FishesScenes/fishLevel3Scene.tscn" type="PackedScene" id=12]
[ext_resource path="res://FishesScenes/fishLevel2Scene.tscn" type="PackedScene" id=13]
[ext_resource path="res://images/gameBox.png" type="Texture" id=14]
[ext_resource path="res://font/Avocado Creamy.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://finishBox.gd" type="Script" id=16]
[ext_resource path="res://menuScene/menuAndPoints.tscn" type="PackedScene" id=17]
[ext_resource path="res://images/fishLevel2imageRight.png" type="Texture" id=18]
[ext_resource path="res://images/flv3l2.png" type="Texture" id=19]
[ext_resource path="res://images/flv5l2.png" type="Texture" id=20]
[ext_resource path="res://images/fishlv6.png" type="Texture" id=21]
[ext_resource path="res://images/shark5.png" type="Texture" id=22]
[ext_resource path="res://images/flv4l1.png" type="Texture" id=23]
[ext_resource path="res://FishesScenes/Octopus.tscn" type="PackedScene" id=24]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=25]
[ext_resource path="res://introChapMess.gd" type="Script" id=26]
[ext_resource path="res://images/eatleft.png" type="Texture" id=27]
[ext_resource path="res://images/Fish0right.png" type="Texture" id=28]
[ext_resource path="res://images/flv3r2.png" type="Texture" id=29]
[ext_resource path="res://images/fishLevel2imageLeft.png" type="Texture" id=30]
[ext_resource path="res://musicScene/musicScene.tscn" type="PackedScene" id=33]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.913725, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0235294, 0.0470588, 0.290196, 0.564706 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.176471, 0.894118, 0.968627, 0.564706 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.960784, 0.835294, 0.964706, 0.764706 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.988235, 0.447059, 0.372549, 0.698039 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.980392, 0.611765, 0.611765, 0.745098 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.980392, 0.611765, 0.611765, 0.745098 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.901961, 0.0705882, 0.0705882, 0.745098 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 25 )

[node name="main" type="Node"]
script = ExtResource( 9 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 520, 300 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="showPoints" type="Label" parent="."]
margin_left = 50.0
margin_top = 540.0
margin_right = 200.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.776471, 0.729412, 0.921569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 540, 297 )

[node name="fishLevel1(1)" parent="." instance=ExtResource( 11 )]

[node name="fishLevel1(1)2" parent="." instance=ExtResource( 11 )]

[node name="fishLevel1(1)3" parent="." instance=ExtResource( 11 )]

[node name="fishLevel1(1)4" parent="." instance=ExtResource( 11 )]

[node name="fishLevel2(1)" parent="." instance=ExtResource( 13 )]

[node name="fishLevel2(1)2" parent="." instance=ExtResource( 13 )]

[node name="fishLevel2(1)3" parent="." instance=ExtResource( 13 )]

[node name="fishLevel3(1)" parent="." instance=ExtResource( 12 )]

[node name="fishLevel3(1)2" parent="." instance=ExtResource( 12 )]

[node name="fishLevel3(1)3" parent="." instance=ExtResource( 12 )]

[node name="fishLevel4(1)" parent="." instance=ExtResource( 10 )]

[node name="fishLevel4(1)2" parent="." instance=ExtResource( 10 )]

[node name="fishLevel4(1)3" parent="." instance=ExtResource( 10 )]

[node name="fishLevel5(1)" parent="." instance=ExtResource( 5 )]

[node name="fishLevel5(2)" parent="." instance=ExtResource( 5 )]

[node name="fishLevel6(1)" parent="." instance=ExtResource( 3 )]

[node name="fishLevel6(1)2" parent="." instance=ExtResource( 3 )]

[node name="Shark" parent="." instance=ExtResource( 8 )]

[node name="Shark2" parent="." instance=ExtResource( 8 )]

[node name="Octopus" parent="." instance=ExtResource( 24 )]

[node name="Octopus2" parent="." instance=ExtResource( 24 )]

[node name="Octopus3" parent="." instance=ExtResource( 24 )]

[node name="Gem" parent="." instance=ExtResource( 4 )]

[node name="JellyFish1" parent="." instance=ExtResource( 7 )]

[node name="JellyFish2" parent="." instance=ExtResource( 7 )]

[node name="JellyFish3" parent="." instance=ExtResource( 7 )]

[node name="finishBox" type="Sprite" parent="."]
visible = false
position = Vector2( 500, 300 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 14 )
script = ExtResource( 16 )

[node name="message" type="Label" parent="finishBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -753.5
margin_top = -450.0
margin_right = -270.5
margin_bottom = -272.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "YOU WIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.433
margin_top = -673.709
margin_right = -253.433
margin_bottom = -557.709
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = " NEXT "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -457.0
margin_right = -45.0
margin_bottom = -350.291
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = " play again "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -250.0
margin_right = -257.719
margin_bottom = -147.587
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = " QUIT "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" parent="." instance=ExtResource( 17 )]

[node name="fishLV2" type="Sprite" parent="menu"]
position = Vector2( 352, 58 )
scale = Vector2( 0.29, 0.28 )
texture = ExtResource( 18 )

[node name="fishLV3" type="Sprite" parent="menu"]
position = Vector2( 385, 58 )
scale = Vector2( 0.31, 0.31 )
texture = ExtResource( 19 )

[node name="fishLV4" type="Sprite" parent="menu"]
position = Vector2( 420, 58 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 20 )

[node name="fishLV5" type="Sprite" parent="menu"]
position = Vector2( 450, 58 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 23 )

[node name="fishLV6" type="Sprite" parent="menu"]
position = Vector2( 480, 58 )
scale = Vector2( 0.13, 0.15 )
texture = ExtResource( 21 )

[node name="fishLV7" type="Sprite" parent="menu"]
position = Vector2( 515, 58 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 22 )

[node name="music" parent="." instance=ExtResource( 33 )]

[node name="introCHAPTER1" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="intro" type="Panel" parent="introCHAPTER1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 30.0
margin_right = 990.0
margin_bottom = 580.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="introButton" type="Button" parent="introCHAPTER1/intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 190.0
margin_right = 50.0
margin_bottom = 230.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "LET'S GO!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="introCHAPTER1/intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="introCHAPTER1/intro"]
position = Vector2( 751.989, 184.912 )
scale = Vector2( 0.229823, 0.215612 )
texture = ExtResource( 27 )

[node name="Sprite2" type="Sprite" parent="introCHAPTER1/intro"]
position = Vector2( 514.422, 386.123 )
scale = Vector2( 0.217317, 0.240337 )
texture = ExtResource( 28 )

[node name="Sprite3" type="Sprite" parent="introCHAPTER1/intro"]
position = Vector2( 599.977, 377.529 )
scale = Vector2( 0.979869, 1.02013 )
texture = ExtResource( 30 )

[node name="Sprite4" type="Sprite" parent="introCHAPTER1/intro"]
position = Vector2( 734.256, 385.51 )
scale = Vector2( 1.38102, 1.55248 )
texture = ExtResource( 29 )
[connection signal="pressed" from="finishBox/Next" to="finishBox" method="_on_Next_pressed"]
[connection signal="pressed" from="finishBox/PlayAgain" to="finishBox" method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="finishBox/Quit" to="finishBox" method="_on_Quit_pressed"]
[connection signal="pressed" from="introCHAPTER1/intro/introButton" to="." method="_on_introButton_pressed"]
